<resources>
    <string name="app_name">Productivity+</string>
    <string name="Img_Desc">Clip Art</string>
    <string name="Button_Text">Get Started</string>
    <string name="formatted_header">The only Productivity App you\'ll ever need !!!</string>
    <string name="notifications">Notifications</string>
    <string name="user_email">User@gmail.com</string>
    <string name="username">Username</string>
    <string name="Switch_text">Turn on Notifications</string>
    <string name="profile_button_text">Edit Profile</string>
    <string name="user_display_pic">User Display Pic</string>
    <string name="form_header">Create Profile</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="dob_hint">Date of Birth</string>
    <string name="form_button">Submit Details</string>
    <string name="edit_profile_header">Edit Profile</string>
    <string name="age_hint">Age</string>
    <string name="category_header">Choose Categories</string>
    <string name="occupation_header">Occupation</string>
    <string name="other_categories">Other Categories</string>
    <string name="work_category">Work</string>
    <string name="study_category">Study</string>
    <string name="fitness_category">Fitness</string>
    <string name="hobbies_category">Hobbies</string>
    <string name="projects_category">Projects</string>
    <string name="entertaiment_category">Entertaiment</string>
    <string name="go_to_dashboard">Go To Dashboard</string>
</resources>