<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    tools:context=".Profile">

    <androidx.cardview.widget.CardView
        android:id="@+id/roundCardView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:elevation="0dp"
        android:padding="5dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/user_display_pic"
            android:src="@drawable/default_avatar" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="214dp"
        android:layout_height="36dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/notifications"
        android:textColor="@color/heading_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/notify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit" />

    <TextView
        android:id="@+id/useremail"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/user_email"
        android:textColor="@color/text_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/username"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/useremail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundCardView" />

    <Switch
        android:id="@+id/notify"
        android:layout_width="331dp"
        android:layout_height="70dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/profile_page_card"
        android:fontFamily="@font/inter_semi"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:text="@string/Switch_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/email_button"
        android:fontFamily="@font/inter_bold"
        android:text="@string/profile_button_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/useremail" />

</androidx.constraintlayout.widget.ConstraintLayout>