<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/choose_category_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".ChooseCategory">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/category_header"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/occupation_header"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/occupation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/other_categories"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/occupation" />

    <RadioGroup
        android:id="@+id/occupation"
        android:layout_width="345dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/work"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/profile_page_card"
            android:button="@android:color/transparent"
            android:drawableRight="@drawable/drawable_work_icon"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="25dp"
            android:text="@string/work_category"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/study"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/profile_page_card"
            android:button="@android:color/transparent"
            android:drawableRight="@drawable/drawable_study_icon"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="25dp"
            android:text="@string/study_category"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RadioGroup>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:rowCount="2"
        app:layout_constraintBottom_toTopOf="@+id/selcategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">


        <CheckBox
            android:id="@+id/fit"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/profile_page_card"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/drawable_fitness_icon"
            android:drawablePadding="2dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/fitness_category"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/hobby"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/profile_page_card"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/drawable_hobby_icon"
            android:drawablePadding="2dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/hobbies_category"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/project"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/profile_page_card"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/drawable_project_icon"
            android:drawablePadding="2dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/projects_category"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/enter"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/profile_page_card"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/drawable_entertainment_icon"
            android:drawablePadding="2dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/entertaiment_category"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </GridLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/selcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@drawable/email_button"
        android:fontFamily="@font/inter_bold"
        android:padding="15dp"
        android:text="@string/go_to_dashboard"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>