<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    tools:context=".CreateUser">

    <androidx.cardview.widget.CardView
        android:id="@+id/roundCardView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:elevation="0dp"
        android:padding="5dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <ImageView
            android:id="@+id/setdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/user_display_pic"
            android:src="@drawable/default_avatar" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/header"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/form_header"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/roundCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/profile_page_card"
        android:ems="10"
        android:fontFamily="@font/inter_semi"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/heading_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundCardView" />

    <DatePicker
        android:id="@+id/dobpicker"
        style="@android:style/Widget.DatePicker"
        android:layout_width="279dp"
        android:layout_height="161dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/profile_page_card"
        android:backgroundTintMode="add"
        android:dayOfWeekBackground="@color/white"
        android:fadeScrollbars="false"
        android:scrollbarStyle="outsideInset"
        android:startYear="1950"
        android:theme="@style/MyDatePicker"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/email"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/profile_page_card"
        android:ems="10"
        android:fontFamily="@font/inter_semi"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/heading_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_semi"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/dob_hint"
        android:textColor="@color/heading_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/dobpicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/email_button"
        android:fontFamily="@font/inter_bold"
        android:text="@string/form_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dobpicker" />


</androidx.constraintlayout.widget.ConstraintLayout>