<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:paddingLeft="50dp"
    android:paddingTop="10dp"
    android:paddingRight="50dp"
    android:paddingBottom="10dp"
    tools:context=".NewUser">

    <ImageView
        android:id="@+id/img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:background="@color/back"
        android:contentDescription="@string/Img_Desc"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002"
        app:srcCompat="@drawable/login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signIn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/email_button"
        android:fontFamily="@font/inter_bold"
        android:text="@string/Button_Text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/formatted_header"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />


</androidx.constraintlayout.widget.ConstraintLayout>