<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    tools:context=".CreateUser">

    <androidx.cardview.widget.CardView
        android:id="@+id/roundCardView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:elevation="0dp"
        android:padding="5dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/changename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editheader">

        <ImageView
            android:id="@+id/editdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/user_display_pic"
            android:src="@drawable/default_avatar" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/editheader"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/edit_profile_header"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/roundCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/changename"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:background="@drawable/profile_page_card"
        android:ems="10"
        android:fontFamily="@font/inter_semi"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/heading_gray"
        android:textSize="20sp"
        app:guidelineUseRtl="false"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundCardView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semi"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:text="@string/age_hint"
        android:textColor="@color/heading_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/dobtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailtext" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/inter_semi"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:text="@string/email_hint"
        android:textColor="@color/heading_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/emailtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changename" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editprofile"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@drawable/email_button"
        android:fontFamily="@font/inter_bold"
        android:text="@string/form_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dobtext" />

    <TextView
        android:id="@+id/emailtext"
        android:layout_width="331dp"
        android:layout_height="35dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inter_semi"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/dobtext"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


</androidx.constraintlayout.widget.ConstraintLayout>